# LexiPlex

./: .gitignore  README.md  conversation_affect_analyzer.py  pyproject.toml  requirements.txt  sentiment_exporter.py
affect_analyzer/: __init__.py  cli.py  pipeline.py
affect_analyzer/analyzers/: affect.py  clinical.py  complexity.py  dynamics.py
affect_analyzer/core/: base.py  registry.py
affect_analyzer/data_types/: transcript.py
affect_analyzer/features/: extractor.py
affect_analyzer/modelling/: valence_arousal.py
affect_analyzer/plotting/: circumplex.py
affect_analyzer/preprocessing/: language.py
affect_analyzer/topics/: topic_modeler.py
app/: streamlit_app.py
data/: fake_transcript.csv  mock_therapy_session.csv
tests/: test_analyzers.py  test_core.py  test_integration.py  test_pipeline.py
