[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lexiplex"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "spacy>=3.6",
    "transformers>=4.35",
    "torch>=2.0",
    "matplotlib>=3.7",
    "click>=8.1",
    "streamlit>=1.28",
    "plotly>=5.17",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[project.scripts]
lexiplex = "affect_analyzer.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["affect_analyzer*"]
